# app/controllers/articles_controller.rb
@@ -40,7 +40,7 @@ class ArticlesController < ApplicationController
       comments: article_comments
     }
     
-    @html_content = render_to_string(partial: 'article', locals: { article: rendered_article })
+    @html_content = render_to_string(partial: 'article', locals: { article: rendered_article }, formats: [:html])
 
     respond_to do |format|
       format.html { render :show }
@@ -52,7 +52,7 @@ class ArticlesController < ApplicationController
   def new
     @article = Article.new
     authorize @article
-    @html_content = render_to_string(partial: 'form', locals: { article: @article })
+    @html_content = render_to_string(partial: 'form', locals: { article: @article }, formats: [:html])
     respond_to do |format|
       format.html { render :new }
       format.json { render json: {form: @html_content } }
@@ -95,7 +95,7 @@ class ArticlesController < ApplicationController
 
   def reject_feedback
     authorize @article, :reject?
-    @html_content = render_to_string(partial: 'reject_feedback_form')
+    @html_content = render_to_string(partial: 'reject_feedback_form', formats: [:html])
     respond_to do |format|
       format.html { render :reject_feedback }
       format.json { render json: { form: @html_content } }
@@ -154,7 +154,7 @@ class ArticlesController < ApplicationController
 
   def rendering_articles(articles, title)
     rendered_articles = ArticleBlueprint.render_as_hash(articles, view: :index, context: { current_user: current_user })
-    @html_content = render_to_string(partial: 'list', locals: { articles: rendered_articles, title: title })
+    @html_content = render_to_string(partial: 'list', locals: { articles: rendered_articles, title: title }, formats: [:html])
     @links = HasHypermediaLinks.hypermedia_general_index(current_user)
 
     respond_to do |format|
